--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
 
-pluginGroup = com.github.ralphpina.intellijopenapilinter
+pluginGroup = net.ralphpina.intellij.openapilinter
 pluginName_ = intellij-openapi-linter
 pluginVersion = 0.0.1
 pluginSinceBuild = 193
