--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,12 +8,12 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.ralphpina.intellijopenapilinter.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.ralphpina.intellijopenapilinter.services.MyProjectService"/>
+        <applicationService serviceImplementation="net.ralphpina.intellij.openapilinter.services.MyApplicationService"/>
+        <projectService serviceImplementation="net.ralphpina.intellij.openapilinter.services.MyProjectService"/>
     </extensions>
 
     <applicationListeners>
-        <listener class="com.github.ralphpina.intellijopenapilinter.listeners.MyProjectManagerListener"
+        <listener class="net.ralphpina.intellij.openapilinter.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
 </idea-plugin>
