Added annotator for spectral linter

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,21 @@
 pluginGroup = net.ralphpina.intellij.openapilinter
 pluginName_ = intellij-openapi-linter
 pluginVersion = 0.0.1
-pluginSinceBuild = 193
+# pluginSinceBuild is specific in order to get access to
+# AnnotationHolder.newAnnotation()
+# See https://github.com/JetBrains/intellij-community/blob/master/platform/analysis-api/src/com/intellij/lang/annotation/AnnotationHolder.java#L212
+pluginSinceBuild = 201.6668.113
 pluginUntilBuild = 202.*
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2019.3.5, 2020.1.4, 2020.2.3
+pluginVerifierIdeVersions = 2020.1.4, 2020.2.3
 
 platformType = IC
-platformVersion = 2019.3
+platformVersion = 2020.1
 platformDownloadSources = true
 # Plugin Dependencies -> https://www.jetbrains.org/intellij/sdk/docs/basics/plugin_structure/plugin_dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = com.intellij.java
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://kotlinlang.org/docs/reference/using-gradle.html#dependency-on-the-standard-library for details.
