--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,8 +6,11 @@
     <!-- Product and plugin compatibility requirements -->
     <!-- https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <externalAnnotator language="yaml" implementationClass="net.ralphpina.intellij.openapilinter.SpectralAnnotator" />
         <applicationService serviceImplementation="net.ralphpina.intellij.openapilinter.services.MyApplicationService"/>
         <projectService serviceImplementation="net.ralphpina.intellij.openapilinter.services.MyProjectService"/>
     </extensions>
