--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -2,7 +2,5 @@
 # https://github.com/detekt/detekt/blob/master/detekt-core/src/main/resources/default-detekt-config.yml
 
 formatting:
-  Indentation:
-    continuationIndentSize: 8
-  ParameterListWrapping:
-    indentSize: 8
+  MaximumLineLength: # I was not able to silence it in SpectralLinter.REGEX
+    active: false
