Better organize the codebase

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,6 @@
     <depends>com.intellij.modules.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <externalAnnotator language="yaml" implementationClass="net.ralphpina.intellij.openapilinter.SpectralAnnotator" />
+        <externalAnnotator language="yaml" implementationClass="net.ralphpina.intellij.openapilinter.annotator.SpectralAnnotator" />
     </extensions>
 </idea-plugin>
